--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "build-ios": "npm run build && cordova prepare ios",
     "build-android": "npm run build && cordova prepare android",
     "stats": "webpack --config config/webpack.config.js --env production --mode production --profile --json > stats.json",
-    "start": "webpack-dev-server --config config/webpack.config.js --mode development --host 0.0.0.0",
-    "start-device": "webpack-dev-server --config config/webpack.config.js --env device --mode development --host 0.0.0.0",
+    "start": "npm run build-assets && npm run build-phaser && webpack-dev-server --config config/webpack.config.js --mode development --host 0.0.0.0",
+    "start-device": "npm run build-assets && npm run build-phaser && webpack-dev-server --config config/webpack.config.js --env device --mode development --host 0.0.0.0",
     "build-assets": "node ./scripts/generateAssetsClass.js",
     "build-quick": "webpack --config config/webpack.config.js --env production --mode development --progress --colors",
     "build-quick-ios": "npm run build-quick && cordova prepare ios",
@@ -34,10 +34,10 @@
   "devDependencies": {
     "@types/cordova": "0.0.34",
     "@types/crypto-js": "^3.1.43",
-    "@types/node": "^10.12.7",
+    "@types/node": "^10.12.9",
     "android-versions": "^1.4.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "clean-webpack-plugin": "^0.1.19",
+    "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "crypto-js": "^3.1.9-1",
     "directory-tree": "^2.1.0",
@@ -46,7 +46,7 @@
     "eslint": "^5.9.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^4.0.0",
     "expose-loader": "^0.7.5",
@@ -62,7 +62,7 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.16.0",
     "tslint-consistent-codestyle": "^1.14.1",
-    "tslint-loader": "^3.6.0",
+    "tslint-loader": "^3.5.4",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "^2.0.1",
