--- a/package.json
+++ b/package.json
@@ -33,13 +33,10 @@
   },
   "devDependencies": {
     "@types/cordova": "0.0.34",
-    "@types/crypto-js": "^3.1.43",
     "@types/node": "^10.12.9",
-    "android-versions": "^1.4.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
-    "crypto-js": "^3.1.9-1",
     "directory-tree": "^2.1.0",
     "dotenv": "^6.1.0",
     "dotenv-webpack": "^1.5.7",
@@ -49,9 +46,6 @@
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^4.0.0",
-    "expose-loader": "^0.7.5",
-    "git-revision-webpack-plugin": "^3.0.3",
-    "html-webpack-plugin": "^3.2.0",
     "phaser": "^3.15.1",
     "prettier": "^1.15.2",
     "readdirp": "^2.2.1",
@@ -66,13 +60,11 @@
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "^2.0.1",
-    "webfontloader": "^1.6.28",
     "webpack": "^4.25.1",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4",
-    "xml2js": "^0.4.19"
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
     "@koreez/phaser3-ninepatch": "^1.2.1",
@@ -81,48 +73,28 @@
     "@robotlegsjs/phaser": "^0.4.0",
     "@robotlegsjs/signalcommandmap": "^0.2.0",
     "@robotlegsjs/signals": "^0.2.0",
-    "cheerio": "^1.0.0-rc.2",
-    "cordova-android": "^7.1.2",
     "cordova-custom-config": "^5.0.2",
-    "cordova-ios": "^4.5.5",
-    "cordova-plugin-appversion": "^1.0.0",
     "cordova-plugin-cocoapod-support": "^1.6.0",
-    "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-exitapp": "^1.0.0",
     "cordova-plugin-extension": "^1.5.4",
     "cordova-plugin-fullscreen": "^1.2.0",
     "cordova-plugin-ionic-webview": "^2.2.3",
     "cordova-plugin-multidex": "^0.1.4",
-    "cordova-plugin-native-spinner": "git+https://github.com/greybax/cordova-plugin-native-spinner.git",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
-    "csp-parse": "0.0.2",
-    "elementtree": "^0.1.7",
-    "glob": "^7.1.3",
     "mobx": "^5.6.0",
-    "npm": "^6.4.1",
-    "plist": "^3.0.1",
-    "q": "^1.5.1",
     "reflect-metadata": "^0.1.12"
   },
   "cordova": {
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": [],
     "plugins": {
-      "cordova-plugin-whitelist": {},
-      "cordova-plugin-dialogs": {},
-      "cordova-plugin-appversion": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "cordova-custom-config": {},
       "cordova-plugin-fullscreen": {},
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
-      "cordova-plugin-native-spinner": {}
+      }
     }
   }
 }
