--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,5 @@
     "lib": ["dom", "es2015.promise", "es6"]
   },
   "include": ["./src/**/*", "./types/**/*", "./plugins/**/*"],
-  "files": [
-    "./node_modules/cordova-plugin-dialogs/types/index.d.ts",
-    "./node_modules/cordova-plugin-statusbar/types/index.d.ts"
-  ]
+  "files": ["./node_modules/cordova-plugin-statusbar/types/index.d.ts"]
 }
