more packages fixings

--- a/package.json
+++ b/package.json
@@ -3,14 +3,6 @@
   "author": "Koreez LLC <hello@koreez.com>",
   "version": "1.0.0",
   "private": true,
-  "description": "cordova phaser3 typescript webpack robotlegsjs mobx boilerplate",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/koreezgames/phaser3-ts-webpack-robotlegsjs-template.git"
-  },
-  "issues": {
-    "url": "https://github.com/koreezgames/phaser3-ts-webpack-robotlegsjs-template/issues"
-  },
   "engines": {
     "node": ">=8.11.2",
     "npm": ">=6.2.0"
@@ -44,20 +36,19 @@
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "phaser": "^3.15.1",
     "prettier": "^1.15.2",
-    "readdirp": "^2.2.1",
     "serve": "^10.1.1",
     "shelljs": "^0.8.3",
-    "stdout": "0.0.3",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.16.0",
     "tslint-consistent-codestyle": "^1.14.1",
     "tslint-loader": "^3.5.4",
     "tslint-plugin-prettier": "^2.0.1",
+    "tsutils": "^3.5.1",
     "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.25.1",
@@ -75,10 +66,8 @@
     "@robotlegsjs/signals": "^0.2.0",
     "cordova-custom-config": "^5.0.2",
     "cordova-plugin-cocoapod-support": "^1.6.0",
-    "cordova-plugin-exitapp": "^1.0.0",
-    "cordova-plugin-extension": "^1.5.4",
     "cordova-plugin-fullscreen": "^1.2.0",
-    "cordova-plugin-ionic-webview": "^2.2.3",
+    "cordova-plugin-ionic-webview": "^2.2.5",
     "cordova-plugin-multidex": "^0.1.4",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
