--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "build": "npm run build-assets && webpack --config config/webpack.config.js --env production --mode production --progress --colors",
-    "build-phaser": "webpack --config config/webpack.phaser.config.js --display-modules --mode production --progress --colors",
+    "build-phaser": "webpack --config config/webpack.phaser.config.js --display-modules --mode development --progress --colors",
     "build-ios": "npm run build && cordova prepare ios",
     "build-android": "npm run build && cordova prepare android",
     "stats": "webpack --config config/webpack.config.js --env production --mode production --profile --json > stats.json",
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@types/cordova": "0.0.34",
-    "@types/node": "^10.12.10",
+    "@types/node": "^10.12.11",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
@@ -39,17 +39,17 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "phaser": "^3.15.1",
-    "prettier": "^1.15.2",
+    "prettier": "^1.15.3",
     "serve": "^10.1.1",
     "shelljs": "^0.8.3",
-    "ts-loader": "^5.3.0",
+    "ts-loader": "^5.3.1",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.16.0",
+    "tslint-config-prettier": "^1.17.0",
     "tslint-consistent-codestyle": "^1.14.1",
     "tslint-loader": "^3.5.4",
     "tslint-plugin-prettier": "^2.0.1",
     "tsutils": "^3.5.1",
-    "typescript": "^3.1.6",
+    "typescript": "^3.2.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.26.1",
     "webpack-bundle-analyzer": "^3.0.3",
