asset building fixings

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "npm run build-assets && npm run build-phaser && webpack-dev-server --config config/webpack.config.js --mode development --host 0.0.0.0",
     "start-device": "npm run build-assets && npm run build-phaser && webpack-dev-server --config config/webpack.config.js --env device --mode development --host 0.0.0.0",
     "build-assets": "node ./scripts/generateAssetsClass.js",
+    "debug-assets": "node --nolazy --inspect-brk=9229 ./scripts/generateAssetsClass.js",
     "build-quick": "webpack --config config/webpack.config.js --env production --mode development --progress --colors",
     "build-quick-ios": "npm run build-quick && cordova prepare ios",
     "build-quick-android": "npm run build-quick && cordova prepare android",
@@ -25,14 +26,15 @@
   },
   "devDependencies": {
     "@types/cordova": "0.0.34",
-    "@types/node": "^10.12.11",
+    "@types/node": "^10.12.12",
+    "@types/webfontloader": "^1.6.29",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
     "directory-tree": "^2.1.1",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.5.7",
-    "eslint": "^5.9.0",
+    "eslint": "^5.10.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
@@ -48,10 +50,10 @@
     "tslint-consistent-codestyle": "^1.14.1",
     "tslint-loader": "^3.5.4",
     "tslint-plugin-prettier": "^2.0.1",
-    "tsutils": "^3.5.1",
-    "typescript": "^3.2.1",
+    "tsutils": "^3.5.2",
+    "typescript": "^3.2.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.26.1",
+    "webpack": "^4.27.1",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
@@ -67,12 +69,13 @@
     "cordova-custom-config": "^5.0.2",
     "cordova-plugin-cocoapod-support": "^1.6.0",
     "cordova-plugin-fullscreen": "^1.2.0",
-    "cordova-plugin-ionic-webview": "^2.2.5",
+    "cordova-plugin-ionic-webview": "^2.3.1",
     "cordova-plugin-multidex": "^0.1.4",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
-    "mobx": "^5.6.0",
-    "reflect-metadata": "^0.1.12"
+    "mobx": "^5.7.0",
+    "reflect-metadata": "^0.1.12",
+    "webfontloader": "^1.6.28"
   },
   "cordova": {
     "platforms": [],
