--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "phaser": "^3.15.1",
+    "phaser": "git+https://github.com/photonstorm/phaser.git#6fb2fd75ff2619e00833c14d6bd75650e60ff89d",
     "prettier": "^1.15.3",
     "serve": "^10.1.1",
     "shelljs": "^0.8.3",
