--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "build": "npm run build-assets && webpack --config config/webpack.config.js --env production --mode production --progress --colors",
-    "build-phaser": "webpack --config config/webpack.phaser.config.js --display-modules --mode development --progress --colors",
+    "build-phaser": "webpack --config config/webpack.phaser.config.js --display-modules --mode production --progress --colors",
     "build-ios": "npm run build && cordova prepare ios",
     "build-android": "npm run build && cordova prepare android",
     "stats": "webpack --config config/webpack.config.js --env production --mode production --profile --json > stats.json",
