iPhone notch detection

--- a/package.json
+++ b/package.json
@@ -68,9 +68,11 @@
     "@robotlegsjs/signalcommandmap": "^1.0.0",
     "@robotlegsjs/signals": "^1.0.0",
     "cordova-custom-config": "^5.0.3",
+    "cordova-ios": "^4.5.5",
     "cordova-plugin-cocoapod-support": "^1.6.0",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-fullscreen": "^1.2.0",
-    "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-ionic-webview": "^2.3.2",
     "cordova-plugin-multidex": "^0.1.4",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -79,7 +81,9 @@
     "webfontloader": "^1.6.28"
   },
   "cordova": {
-    "platforms": [],
+    "platforms": [
+      "ios"
+    ],
     "plugins": {
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
@@ -87,7 +91,8 @@
       "cordova-plugin-fullscreen": {},
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      }
+      },
+      "cordova-plugin-device": {}
     }
   }
 }
