--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "es6",
+    "module": "esnext",
     "target": "es5",
     "moduleResolution": "node",
     "sourceMap": false,
@@ -12,7 +12,7 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "lib": ["dom", "es2015.promise", "es6"]
+    "lib": ["dom", "es2015"]
   },
   "include": ["./src/**/*", "./types/**/*", "./plugins/**/*"],
   "files": ["./node_modules/cordova-plugin-statusbar/types/index.d.ts"]
