--- a/package.json
+++ b/package.json
@@ -28,20 +28,22 @@
     "@types/cordova": "0.0.34",
     "@types/node": "^10.12.18",
     "@types/webfontloader": "^1.6.29",
-    "case-sensitive-paths-webpack-plugin": "^2.1.2",
-    "clean-webpack-plugin": "^1.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^4.6.0",
     "directory-tree": "^2.2.1",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
-    "eslint": "^5.12.0",
+    "eslint": "^5.12.1",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "phaser": "git+https://github.com/photonstorm/phaser.git#79dc611b953dcb8050127697a022b93cb36ba965",
-    "prettier": "^1.15.3",
+    "exports-loader": "^0.7.0",
+    "imports-loader": "^0.8.0",
+    "phaser": "^3.16.0-rc1",
+    "prettier": "^1.16.1",
     "serve": "^10.1.1",
     "shelljs": "^0.8.3",
     "ts-loader": "^5.3.3",
@@ -53,7 +55,7 @@
     "tsutils": "^3.7.0",
     "typescript": "^3.2.4",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.28.4",
+    "webpack": "^4.29.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
@@ -76,7 +78,7 @@
     "cordova-plugin-multidex": "^0.1.4",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
-    "mobx": "^5.8.0",
+    "mobx": "^5.9.0",
     "reflect-metadata": "^0.1.13",
     "webfontloader": "^1.6.28"
   },
