--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@types/cordova": "0.0.34",
-    "@types/node": "^10.12.18",
+    "@types/node": "^10.12.24",
     "@types/webfontloader": "^1.6.29",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^1.0.1",
@@ -34,31 +34,31 @@
     "directory-tree": "^2.2.1",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
-    "eslint": "^5.12.1",
+    "eslint": "^5.13.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "exports-loader": "^0.7.0",
     "imports-loader": "^0.8.0",
-    "phaser": "^3.16.0-rc2",
-    "prettier": "^1.16.1",
-    "serve": "^10.1.1",
+    "phaser": "^3.16.1",
+    "prettier": "^1.16.4",
+    "serve": "^10.1.2",
     "shelljs": "^0.8.3",
     "ts-loader": "^5.3.3",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
-    "tslint-config-prettier": "^1.17.0",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-consistent-codestyle": "^1.15.0",
     "tslint-loader": "^3.5.4",
     "tslint-plugin-prettier": "^2.0.1",
-    "tsutils": "^3.7.0",
-    "typescript": "^3.2.4",
+    "tsutils": "^3.8.0",
+    "typescript": "^3.3.3",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.29.0",
+    "webpack": "^4.29.3",
     "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.2.1",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.2.1"
   },
