--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "shelljs": "^0.8.3",
     "ts-loader": "^5.3.3",
     "tslint": "^5.12.1",
-    "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-consistent-codestyle": "^1.15.0",
     "tslint-loader": "^3.5.4",
+    "tslint-microsoft-contrib": "^6.0.0",
     "tslint-plugin-prettier": "^2.0.1",
     "tsutils": "^3.8.0",
     "typescript": "^3.3.3",
