--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
   },
   "devDependencies": {
     "@types/cordova": "0.0.34",
-    "@types/node": "^10.12.24",
+    "@types/node": "^11.9.4",
     "@types/webfontloader": "^1.6.29",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "clean-webpack-plugin": "^1.0.1",
-    "copy-webpack-plugin": "^4.6.0",
+    "copy-webpack-plugin": "^5.0.0",
     "directory-tree": "^2.2.1",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
-    "eslint": "^5.13.0",
+    "eslint": "^5.14.1",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
@@ -51,27 +51,27 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-consistent-codestyle": "^1.15.0",
     "tslint-loader": "^3.5.4",
-    "tslint-microsoft-contrib": "^6.0.0",
+    "tslint-microsoft-contrib": "^6.1.0-beta",
     "tslint-plugin-prettier": "^2.0.1",
     "tsutils": "^3.8.0",
     "typescript": "^3.3.3",
     "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.29.3",
-    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack": "^4.29.5",
+    "webpack-bundle-analyzer": "^3.0.4",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14",
+    "webpack-dev-server": "^3.2.0",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "@koreez/phaser3-i18n": "^2.0.5",
-    "@koreez/phaser3-ninepatch": "^1.2.3",
+    "@koreez/phaser3-i18n": "^2.0.6",
+    "@koreez/phaser3-ninepatch": "^1.2.4",
     "@robotlegsjs/core": "^1.0.0",
     "@robotlegsjs/macrobot": "^1.0.0",
     "@robotlegsjs/phaser": "^1.0.1",
     "@robotlegsjs/signalcommandmap": "^1.0.0",
     "@robotlegsjs/signals": "^1.0.0",
     "cordova-custom-config": "^5.0.3",
-    "cordova-ios": "^4.5.5",
+    "cordova-ios": "^5.0.0",
     "cordova-plugin-cocoapod-support": "^1.6.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-fullscreen": "^1.2.0",
